tests/ui/enum-discriminant/generic-self-in-discr-inline-const.stderr
error: generic `Self` types are not permitted in enum discriminant values
  --> $DIR/generic-self-in-discr-inline-const.rs:10:31
   |
LL |     X = const { { let _: *mut Self; 1_usize } },
   |                               ^^^^

error: aborting due to 1 previous error

